tekton/route.yaml
# From https://github.com/parodos-dev/red-hat-developer-hub-software-templates/blob/tekton-demo/skeletons/tekton/tekton/eventlistener.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: webhook-onboarding-el
  namespace: sonataflow-infra
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: onboarding-el
spec:
  to:
    kind: Service
    name: el-onboarding-el
    weight: 100
  port:
    targetPort: http-listener
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
